--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,9 @@
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
 # Build and test ASP.NET projects.
 # Add steps that publish symbols, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/apps/aspnet/build-aspnet-4
