--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,8 @@
 # ASP.NET
+- task: UseDotNet@2
+  inputs:
+    packageType: 'sdk'
+    version: 
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
